Refactor command and pathfinding logic, improve rotation
Refactored command exception handling for better encapsulation and naming consistency. Improved command history management in CommandManager. Updated KeyBindUtils movement direction logic for accuracy. Refactored Walker pathfinding to simplify rotation handling, improve look-ahead targeting, and fix issues with block position handling. Fixed a rendering bug in Walking module's box drawing. Added null checks and improved rotation logic in RotationManager.